--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,42 @@
 asgiref==3.6.0
+atomicwrites==1.4.1
+attrs==23.1.0
+certifi==2022.12.7
+chardet==3.0.4
+charset-normalizer==3.1.0
+colorama==0.4.6
+coreapi==2.3.3
+coreschema==0.0.4
 Django==3.0
+django-debug-toolbar==2.2
+djangorestframework==3.12.4
+drf-yasg==1.21.5
+exceptiongroup==1.1.1
+Faker==12.0.1
+idna==2.8
+inflection==0.5.1
+iniconfig==2.0.0
+itypes==1.2.0
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+mixer==7.1.2
+more-itertools==9.1.0
+packaging==23.1
+Pillow==9.5.0
+pluggy==0.13.1
+py==1.11.0
+pytest==5.3.5
+pytest-django==3.8.0
+pytest-pythonpath==0.7.3
+python-dateutil==2.8.2
 pytz==2023.3
+requests==2.22.0
+ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.7
+six==1.14.0
+sorl-thumbnail==12.6.3
 sqlparse==0.4.3
+tomli==2.0.1
+uritemplate==4.1.1
+urllib3==1.25.11
+wcwidth==0.2.6
